{
  "version": 4,
  "terraform_version": "0.15.5",
  "serial": 201,
  "lineage": "0dac9913-dc6e-85ae-e7ed-0e36ccf4adfb",
  "resources": [
    {
      "module": "module.routetable-priv-a",
      "mode": "managed",
      "type": "aws_route",
      "name": "route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0a0184db7dd00e01e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-027b7caa07ece7021",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a0184db7dd00e01e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.routetable-priv-a.aws_route_table.route_table",
            "module.subnet-priv-a.aws_eip.eip",
            "module.subnet-priv-a.aws_nat_gateway.ntgw",
            "module.subnet-priv-a.aws_subnet.subnet-priv",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.routetable-priv-a",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:316649572417:route-table/rtb-0a0184db7dd00e01e",
            "id": "rtb-0a0184db7dd00e01e",
            "owner_id": "316649572417",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-027b7caa07ece7021",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-022f8c2f4224abc6b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnet-priv-a.aws_eip.eip",
            "module.subnet-priv-a.aws_nat_gateway.ntgw",
            "module.subnet-priv-a.aws_subnet.subnet-priv",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.routetable-priv-a",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-035ff9e32d68267c1",
            "route_table_id": "rtb-0a0184db7dd00e01e",
            "subnet_id": "subnet-0df295063de2734d9"
          },
          "dependencies": [
            "module.routetable-priv-a.aws_route_table.route_table",
            "module.subnet-priv-a.aws_eip.eip",
            "module.subnet-priv-a.aws_nat_gateway.ntgw",
            "module.subnet-priv-a.aws_subnet.subnet-priv",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.routetable-priv-b",
      "mode": "managed",
      "type": "aws_route",
      "name": "route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0c483edf4abb73c081080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0d50fa963ecb819d8",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c483edf4abb73c08",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.routetable-priv-b.aws_route_table.route_table",
            "module.subnet-priv-b.aws_eip.eip",
            "module.subnet-priv-b.aws_nat_gateway.ntgw",
            "module.subnet-priv-b.aws_subnet.subnet-priv",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.routetable-priv-b",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:316649572417:route-table/rtb-0c483edf4abb73c08",
            "id": "rtb-0c483edf4abb73c08",
            "owner_id": "316649572417",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d50fa963ecb819d8",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-022f8c2f4224abc6b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnet-priv-b.aws_eip.eip",
            "module.subnet-priv-b.aws_nat_gateway.ntgw",
            "module.subnet-priv-b.aws_subnet.subnet-priv",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.routetable-priv-b",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-073a53faba3853871",
            "route_table_id": "rtb-0c483edf4abb73c08",
            "subnet_id": "subnet-050c68e8a15c55718"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main",
            "module.routetable-priv-b.aws_route_table.route_table",
            "module.subnet-priv-b.aws_eip.eip",
            "module.subnet-priv-b.aws_nat_gateway.ntgw",
            "module.subnet-priv-b.aws_subnet.subnet-priv"
          ]
        }
      ]
    },
    {
      "module": "module.routetable-pub",
      "mode": "managed",
      "type": "aws_route",
      "name": "route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0fde3e4c484dd8910",
            "id": "r-rtb-07a04a6648bc1f4431080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07a04a6648bc1f443",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.routetable-pub.aws_route_table.route_table",
            "module.subnet-pub-a.aws_subnet.subnet-pub",
            "module.subnet-pub-b.aws_subnet.subnet-pub",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.routetable-pub",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:316649572417:route-table/rtb-07a04a6648bc1f443",
            "id": "rtb-07a04a6648bc1f443",
            "owner_id": "316649572417",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fde3e4c484dd8910",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-022f8c2f4224abc6b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.subnet-pub-a.aws_subnet.subnet-pub",
            "module.subnet-pub-b.aws_subnet.subnet-pub",
            "module.vpc.aws_internet_gateway.igw"
          ]
        }
      ]
    },
    {
      "module": "module.routetable-pub",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0406f4b28c3a9767b",
            "route_table_id": "rtb-07a04a6648bc1f443",
            "subnet_id": "subnet-0a922950f72fc6d92"
          },
          "dependencies": [
            "module.subnet-pub-a.aws_subnet.subnet-pub",
            "module.subnet-pub-b.aws_subnet.subnet-pub",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main",
            "module.routetable-pub.aws_route_table.route_table"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ae6d625b50b40b68",
            "route_table_id": "rtb-07a04a6648bc1f443",
            "subnet_id": "subnet-0b06098c2c31ceb11"
          },
          "dependencies": [
            "module.routetable-pub.aws_route_table.route_table",
            "module.subnet-pub-a.aws_subnet.subnet-pub",
            "module.subnet-pub-b.aws_subnet.subnet-pub",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security-group-eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:316649572417:security-group/sg-00245bd837a64c697",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all traffic to VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00245bd837a64c697",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.8.0.0/16"
                ],
                "description": "Allow all traffic from VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "eks-sg",
            "name_prefix": "",
            "owner_id": "316649572417",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-sg"
            },
            "tags_all": {
              "Name": "eks-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-022f8c2f4224abc6b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnet-priv-a",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05e4f0d6eb7592bed",
            "association_id": "eipassoc-09d9c6bdfa6178697",
            "domain": "vpc",
            "id": "eipalloc-05e4f0d6eb7592bed",
            "network_border_group": "us-east-1",
            "network_interface": "eni-02bf36439c512b675",
            "private_dns": "ip-10-8-1-199.ec2.internal",
            "private_ip": "10.8.1.199",
            "public_dns": "ec2-3-220-0-50.compute-1.amazonaws.com",
            "public_ip": "3.220.0.50",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "subnet-priv-a"
            },
            "tags_all": {
              "Name": "subnet-priv-a"
            },
            "vpc": true
          },
          "dependencies": [
            "module.subnet-priv-a.aws_subnet.subnet-priv",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnet-priv-a",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ntgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05e4f0d6eb7592bed",
            "association_id": "eipassoc-09d9c6bdfa6178697",
            "connectivity_type": "public",
            "id": "nat-027b7caa07ece7021",
            "network_interface_id": "eni-02bf36439c512b675",
            "private_ip": "10.8.1.199",
            "public_ip": "3.220.0.50",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0df295063de2734d9",
            "tags": {
              "Name": "subnet-priv-a"
            },
            "tags_all": {
              "Name": "subnet-priv-a"
            }
          },
          "dependencies": [
            "module.subnet-priv-a.aws_eip.eip",
            "module.subnet-priv-a.aws_subnet.subnet-priv",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnet-priv-a",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-priv",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:316649572417:subnet/subnet-0df295063de2734d9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.8.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0df295063de2734d9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "316649572417",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-priv-a"
            },
            "tags_all": {
              "Name": "subnet-priv-a"
            },
            "vpc_id": "vpc-022f8c2f4224abc6b"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnet-priv-b",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f451c6aa6fb24632",
            "association_id": "eipassoc-016f99d1535033c1e",
            "domain": "vpc",
            "id": "eipalloc-0f451c6aa6fb24632",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0ce636860229fa28e",
            "private_dns": "ip-10-8-2-202.ec2.internal",
            "private_ip": "10.8.2.202",
            "public_dns": "ec2-3-83-75-218.compute-1.amazonaws.com",
            "public_ip": "3.83.75.218",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "subnet-priv-b"
            },
            "tags_all": {
              "Name": "subnet-priv-b"
            },
            "vpc": true
          },
          "dependencies": [
            "module.subnet-priv-b.aws_subnet.subnet-priv",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnet-priv-b",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ntgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f451c6aa6fb24632",
            "association_id": "eipassoc-016f99d1535033c1e",
            "connectivity_type": "public",
            "id": "nat-0d50fa963ecb819d8",
            "network_interface_id": "eni-0ce636860229fa28e",
            "private_ip": "10.8.2.202",
            "public_ip": "3.83.75.218",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-050c68e8a15c55718",
            "tags": {
              "Name": "subnet-priv-b"
            },
            "tags_all": {
              "Name": "subnet-priv-b"
            }
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.subnet-priv-b.aws_eip.eip",
            "module.subnet-priv-b.aws_subnet.subnet-priv",
            "module.vpc.aws_internet_gateway.igw"
          ]
        }
      ]
    },
    {
      "module": "module.subnet-priv-b",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-priv",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:316649572417:subnet/subnet-050c68e8a15c55718",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.8.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-050c68e8a15c55718",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "316649572417",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-priv-b"
            },
            "tags_all": {
              "Name": "subnet-priv-b"
            },
            "vpc_id": "vpc-022f8c2f4224abc6b"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnet-pub-a",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:316649572417:subnet/subnet-0a922950f72fc6d92",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.8.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a922950f72fc6d92",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "316649572417",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-pub-a"
            },
            "tags_all": {
              "Name": "subnet-pub-a"
            },
            "vpc_id": "vpc-022f8c2f4224abc6b"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnet-pub-b",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:316649572417:subnet/subnet-0b06098c2c31ceb11",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.8.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b06098c2c31ceb11",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "316649572417",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-pub-b"
            },
            "tags_all": {
              "Name": "subnet-pub-b"
            },
            "vpc_id": "vpc-022f8c2f4224abc6b"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:316649572417:internet-gateway/igw-0fde3e4c484dd8910",
            "id": "igw-0fde3e4c484dd8910",
            "owner_id": "316649572417",
            "tags": {
              "Name": "vpc-app-web"
            },
            "tags_all": {
              "Name": "vpc-app-web"
            },
            "vpc_id": "vpc-022f8c2f4224abc6b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:316649572417:vpc/vpc-022f8c2f4224abc6b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.8.0.0/16",
            "default_network_acl_id": "acl-0aee49555e288662d",
            "default_route_table_id": "rtb-04a7fab114933e356",
            "default_security_group_id": "sg-029f1f6df0da50356",
            "dhcp_options_id": "dopt-7fc58b05",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-022f8c2f4224abc6b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04a7fab114933e356",
            "owner_id": "316649572417"
          }
        }
      ]
    }
  ]
}